# jobformer

./: .gitignore  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  run_15m_windows.ps1  run_windows.ps1  taskschd_setup.md
data/: config.env.example
google_apps_script/: jobs_onedit.gs  jobs_today_cleanup.gs
src/jobscraper/: aneti_watch.py  cdp_fetch_smoke.py  cdp_open_tabs.py  cdp_page_fetch.py  cdp_session.py  cli.py  config.py  db.py  filtering.py  gog.py  job_scores_db.py  job_scoring.py  job_scoring_cached.py  job_scoring_sheet.py  job_text_cache_db.py  linkedin_first_page_cdp.py  linkedin_page_fetch.py  linkedin_watch.py  llm_score.py  migrate_linkedin_sources.py  models.py  page_fetch.py  run.py  score_unscored_sheet.py  sheets_all_jobs.py  sheets_sync.py  smoke.py  tanitjobs_catchup.py  tanitjobs_page_fetch.py  tanitjobs_watch.py  text_extraction.py  transfer_today.py  url_canon.py
src/jobscraper/alerts/: pushover.py
src/jobscraper/sources/: aneti.py  keejob.py  linkedin_cdp.py  linkedin_minimal.py  remoteok.py  remotive.py  tanitjobs.py  weworkremotely.py  wttj.py
tests/: test_cli_default.py
windows/: CDP_WORKFLOW_9224.txt  CDP_WORKFLOW_9224_simple.txt  start_cdp_9224_simple.ps1  start_job_scraper_chrome.ps1  start_job_scraper_chrome_minimized.ps1
