[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jobformer"
version = "0.1.0"
description = "Personal job scraper"
requires-python = ">=3.10"

dependencies = [
  "playwright==1.58.0",
  "PyYAML==6.0.3",
  "selectolax==0.4.6",
  "requests==2.32.5",
  "click==8.1.7",
  "typer==0.12.5",
  "rich==13.9.4",
  "questionary==2.1.0",
]

[project.scripts]
jobformer = "jobscraper.cli:app"
# Back-compat alias
jobscraper = "jobscraper.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
